endpoints con responses de error para facilitar documentacion automatica de openapi, contrato listo
